--- a/src/components/VideoItem.css
+++ b/src/components/VideoItem.css
@@ -2,6 +2,25 @@
     display: flex !important;
     align-items: center !important;
     cursor: pointer;
+    transition: all ease-in-out 200ms;
+    position: relative;
+    opacity: 0.7;
+}
+
+.video-item:hover {
+    opacity: 1;
+}
+
+@media (min-width: 991px) {
+    .video-item:hover:before {
+        content: '';
+        width: 10px;
+        height: 10px;
+        position: absolute;
+        left: -20px;
+        background-color: #c3c3c3;
+        border-radius: 50%;
+    }
 }
 
 .video-item.item img {
